# tmx

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  COPYING  README.md  tmxConfig.cmake.in
.github/workflows/: buildandtest.yaml  release.yaml
cmake/: FindJansson.cmake  FindYajl.cmake
doc/: CMakeLists.txt  requirements.txt
doc/src/: build.rst  datastructure.rst  error.rst  functions.rst  getting-started.rst  override.rst  renderer-from-scratch.rst
examples/: allegro.c  b64zlib.tmx  csv.tmx  dumper.c  example.c  example.json  sdl.c
examples/allegro/: CMakeLists.txt  allegro.c
examples/data/: b64zlib.tmx  b64zstd.tmx  csv.tmx  externtileset.tmx  objecttemplates.tmx  proj.tiled-project  tileset.tsx
examples/dumper/: CMakeLists.txt  dumper.c
examples/raylib/: CMakeLists.txt  raylib.c
examples/sdl/: CMakeLists.txt  sdl.c
src/: tmx.c  tmx.h  tmx_array.c  tmx_array.h  tmx_err.c  tmx_hash.c  tmx_json.c  tmx_mem.c  tmx_utils.c  tmx_utils.h  tmx_xml.c  tmx_xml.h  tsx.c  tsx.h
